kustomize/overlays/scots-lab/apps/vert/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vert
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
