kustomize/overlays/scots-lab/apps/vert/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vert
  namespace: vert
spec:
  parentRefs:
    - name: kgateway-http
      namespace: kgateway-system
  hostnames:
    - "vert.srbii.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vert
          port: 4180
